# RAG

./: .gitignore  Makefile  README.md  pyproject.toml
data/raw/vllm-0.10.1/requirements/: common.txt
src/: chuncker.py
src/models/: minimalSearch.py  minimalSource.py  questions.py  ragDataset.py  student.py
tests/: test_chunck.py
