[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bm25s>=0.3.9",
    "fire>=0.7.1",
    "flake8>=7.3.0",
    "mypy>=2.1.0",
    "pydantic>=2.13.4",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
]
